Added AsyncAPI document for WS
